Notificaciones y alertas habilitados

--- a/src/app/modules/menu-layout/components/clients/clients.component.html
+++ b/src/app/modules/menu-layout/components/clients/clients.component.html
@@ -32,10 +32,24 @@
           <div nz-row nzAlign="middle" nzJustify="center">
             <div nz-col>
               <div *ngIf="provider.estado ; else disable">
-                <button nz-button nzDanger nzType="primary" (click)="disableProvider(provider, 0)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+                <button nz-button nzDanger nzType="primary" 
+                nz-popconfirm
+                nzPopconfirmTitle="Estas seguro que quieres deshabilitarlo?"
+                (nzOnConfirm)="disableProvider(provider, 0)"
+                (nzOnCancel)="cancel()"
+                nzPopconfirmPlacement="rightBottom"
+                nz-button
+                ><i nz-icon nzType="delete" nzTheme="outline"></i></button>
               </div>
               <ng-template #disable>
-                <button nz-button (click)="disableProvider(provider, 1)"><i nz-icon nzType="undo" nzTheme="outline"></i></button>
+                <button nz-button
+                nz-popconfirm
+                nzPopconfirmTitle="Estas seguro que quieres habilitarlo?"
+                (nzOnConfirm)="disableProvider(provider, 1)"
+                (nzOnCancel)="cancel()"
+                nzPopconfirmPlacement="rightBottom"
+                nz-button 
+                ><i nz-icon nzType="undo" nzTheme="outline"></i></button>
               </ng-template>
             </div>
               <div nz-col nzOffset="1">
