--- a/src/app/modules/menu-layout/components/meters/roll-over-modal/roll-over-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/roll-over-modal/roll-over-modal.component.html
@@ -143,10 +143,22 @@
                     <div nz-row>
                       <div nz-col>
                         <div *ngIf="data.estado; else disablesList"> 
-                            <button nzSize="small" nz-button nzType="primary" nzDanger (click)=" disableVMeter(data, false)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+                            <button nzSize="small" nz-button nzType="primary" nzDanger 
+                            nz-popconfirm
+                            nzPopconfirmTitle="Estas seguro que quieres emitir esta factura ?"
+                            (nzOnConfirm)=" disableVMeter(data, false)"
+                            (nzOnCancel)="cancel()"
+                            nzPopconfirmPlacement="rightBottom"
+                            ><i nz-icon nzType="delete" nzTheme="outline"></i></button>
                         </div>
                         <ng-template #disablesList>
-                            <button nzSize="small"  nz-button nzType="primary" (click)=" disableVMeter(data, true)"><i nz-icon nzType="undo" nzTheme="outline"></i></button>
+                            <button nzSize="small"  nz-button nzType="primary" 
+                            nz-popconfirm
+                            nzPopconfirmTitle="Estas seguro que quieres emitir esta factura ?"
+                            (nzOnConfirm)=" disableVMeter(data, true)"
+                            (nzOnCancel)="cancel()"
+                            nzPopconfirmPlacement="rightBottom" 
+                            ><i nz-icon nzType="undo" nzTheme="outline"></i></button>
                         </ng-template>
                       </div>
                       <div nz-col nzOffset="1">
