--- a/src/app/modules/menu-layout/components/contracts/factura-ehh/factura-ehh.component.html
+++ b/src/app/modules/menu-layout/components/contracts/factura-ehh/factura-ehh.component.html
@@ -113,9 +113,24 @@
                                   <button class="edit" nzSize="small" nz-button nzType="primary" (click)="editableForm(data)"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
                                 </div>
                                 <div nz-col nzOffset="1">
-                                  <button *ngIf="data.estado; else enable" class="delete" nzSize="small" nz-button nzType="primary" nzDanger (click)="disable(data, false)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+                                  <button *ngIf="data.estado; else enable" class="delete" nzSize="small" nz-button nzType="primary" nzDanger
+                                  nz-popconfirm
+                                  nzPopconfirmTitle="Estas seguro que quieres habilitarlo?"
+                                  (nzOnConfirm)="disable(data, false)"
+                                  (nzOnCancel)="cancel()"
+                                  nzPopconfirmPlacement="rightBottom"
+                              
+                                  ><i nz-icon nzType="delete" nzTheme="outline"></i></button>
                                   <ng-template #enable>
-                                    <button class="delete" nzSize="small" nz-button nzType="primary"><i nz-icon nzType="undo" nzTheme="outline" (click)="disable(data, true)"></i></button>
+                                    <button class="delete" nzSize="small" nz-button nzType="primary"
+                                    nz-popconfirm
+                                    nzPopconfirmTitle="Estas seguro que quieres habilitarlo?"
+                                    (nzOnConfirm)="disable(data, true)"
+                                    (nzOnCancel)="cancel()"
+                                    nzPopconfirmPlacement="rightBottom"
+                                    
+
+                                    ><i nz-icon nzType="undo" nzTheme="outline"></i></button>
 
                                   </ng-template>
                                   
