--- a/src/app/modules/menu-layout/components/generated-invoices/generated-invoices.component.html
+++ b/src/app/modules/menu-layout/components/generated-invoices/generated-invoices.component.html
@@ -86,7 +86,13 @@
             </ng-template>
             
             <td nzRight nzAlign="center">
-                <button nz-button nzSize="small" nzType="primary" (click)="EmitirFactura(data)"><i nz-icon nzType="check"></i></button>
+                <button nz-button nzSize="small" nzType="primary" 
+                nz-popconfirm
+                nzPopconfirmTitle="Estas seguro que quieres emitir esta factura ?"
+                (nzOnConfirm)="EmitirFactura(data)"
+                (nzOnCancel)="cancel()"
+                nzPopconfirmPlacement="rightBottom"
+                ><i nz-icon nzType="check"></i></button>
             </td>
             <td nzRight nzAlign="center">
               <button nz-button nzSize="small" nzType="primary" (click)="GenerateInvoice(data)"><i nz-icon nzType="file-done"></i></button>
