--- a/src/app/shared/components/digital-invoice/digital-invoice.component.html
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.html
@@ -145,6 +145,28 @@
                     </tr>
                     
                 </tbody>
+                <tbody *ngFor="let data of dataInvoice.vmedidor">
+                    <tr>
+                        <td class="tg-oe15">Ajuste Activa</td>
+                        <td class="tg-zk76" colspan="2">{{data.descripcion}}</td>
+                        <td class="tg-wk8r">{{data.LecturaActiva  | number:'1.0':'en-US'}}</td>
+                        <td class="tg-wk8r">{{data.porcentaje  | number:'1.0':'en-US'}} %</td>
+                        <td class="tg-wk8r">{{data.LecturaActiva  | number:'1.0':'en-US'}}</td>
+                        <td class="tg-wk8r"> kWhA </td>
+                    </tr>
+
+                </tbody>
+                <tbody *ngFor="let data of dataInvoice.vmedidor">
+                    <tr>
+                        <td class="tg-oe15">Ajuste Reactiva</td>
+                        <td class="tg-zk76" colspan="2">{{data.descripcion}}</td>
+                        <td class="tg-wk8r">{{data.LecturaReactiva  | number:'1.0':'en-US'}}</td>
+                        <td class="tg-wk8r">{{data.porcentaje  | number:'1.0':'en-US'}} %</td>
+                        <td class="tg-wk8r">{{data.LecturaReactiva  | number:'1.0':'en-US'}}</td>
+                        <td class="tg-wk8r"> kWhA </td>
+                    </tr>
+
+                </tbody>
                 <tbody>
                     
                     <tr>
@@ -274,7 +296,7 @@
     <div style="background-color: #b9b9b9; margin: 1% 3% 1% 7%;">
         <p class="totales-historico">
             <span> Promedio de consumo:</span>
-            <span> {{promedioConsumo  | number:'1.0':'en-US' }} kWh </span>
+            <span> {{dataSource.promedioConsumo | number:'1.0':'en-US' }} kWh </span>
         </p>
     </div>
 </div>
