--- a/src/app/modules/menu-layout/components/cancelled-invoices/cancelled-invoices.component.html
+++ b/src/app/modules/menu-layout/components/cancelled-invoices/cancelled-invoices.component.html
@@ -1,10 +1,12 @@
-<h1>Facturas Canceladas</h1>
+
+<div *ngIf="!FacturaIsVisible"><div nz-row class="row-2" >
+  <h1>Facturas Canceladas</h1>
 <br>
-<div nz-row class="row-2">
   <div nz-col>
       <nz-table #filterTable [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{   x: '100%', y: '385px' }"  [nzPageSize]="10">
         <thead>
           <tr>
+            <th nzRight nzWidth="90px" nzAlign="center">Acciones</th>
             <th
               *ngFor="let column of listOfColumns"
               [nzSortOrder]="column.sortOrder"
@@ -17,19 +19,42 @@
             >
               {{ column.name }}
             </th>
+            <th nzRight nzWidth="120px" nzAlign="center">Genenerar factura</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let data of filterTable.data">
+            <td nzLeft nzAlign="center">
+              <button nz-button nzSize="small" nzType="primary"
+              nz-popconfirm
+              nzPopconfirmTitle="Estas seguro que quieres emitir esta factura ?"
+              (nzOnConfirm)="CancelarFactura(data)"
+              (nzOnCancel)="cancel()"
+              nzPopconfirmPlacement="rightBottom"
+              ><i nz-icon nzType="undo" nzTheme="outline"></i></button>
+            </td>
             <td>{{data.codigo}}</td>
             <td>{{ data.codigoContrato }}</td>
             <td>{{data.cliente}}</td>
-            <td>{{data.fechaLectura  | date:'dd/M/yyyy'  }}</td>
-            <td>{{ data.energiaConsumida }}</td>
-            <td style="color: red;">{{ data.total }}</td>
+            <td>{{data.fechaLectura  | date:'dd/M/yyyy':'GMT'  }}</td>
+            <td>{{ data.energiaConsumida | number:'1.0':'en-US' }} kWh</td>
+            <td style="color: red;">L {{ data.total | number:'1.0':'en-US'}}</td>
+            <td nzRight nzAlign="center">
+              <button nz-button nzSize="small" nzType="primary" (click)="GenerateInvoice(data)"><i nz-icon nzType="file-done"></i></button>
+
+            </td>
           </tr>
         </tbody>
       </nz-table>
       
   </div>
+</div>
+  
+</div>
+
+
+<div *ngIf="FacturaIsVisible"> 
+  <button class="back-btn" nz-button nzType="primary" (click)="Back()"><i nz-icon nzType="arrow-left"></i></button>
+  <app-digital-invoice [dataInvoice]="dataInvoice"  [dataSource]="dataSource" [historicData]="historicData"></app-digital-invoice>
+
 </div>
