--- a/src/app/modules/menu-layout/components/issued-invoices/issued-invoices.component.html
+++ b/src/app/modules/menu-layout/components/issued-invoices/issued-invoices.component.html
@@ -38,7 +38,7 @@
             <td>{{data.codigo}}</td>
             <td>{{ data.codigoContrato }}</td>
             <td>{{data.cliente}}</td>
-            <td>{{data.fechaLectura  | date:'dd/M/yyyy'  }}</td>
+            <td>{{data.fechaInicio  | date:'dd/M/yyyy':'GMT'  }} - {{data.fechaFin  | date:'dd/M/yyyy':'GMT'  }}</td>
             <td>{{ data.energiaConsumida }}</td>
             <td style="color: red;">{{data.total + "  LPS"}}</td>
             <td nzRight nzAlign="center">
