--- a/src/app/modules/menu-layout/components/contracts/modal-new-contract/modal-new-contract.component.html
+++ b/src/app/modules/menu-layout/components/contracts/modal-new-contract/modal-new-contract.component.html
@@ -48,7 +48,7 @@
             <div nz-col nzSpan="24">
                 <label>Rango de fecha</label>
                 <div nz-row>
-                        <nz-range-picker style="width: 475px;" formControlName="fecha" [nzRanges]="ranges"></nz-range-picker>
+                        <nz-range-picker [nzShowTime]="true" style="width: 475px;" formControlName="fecha" [nzRanges]="ranges"></nz-range-picker>
                 </div>
     
             </div>
