--- a/src/app/modules/menu-layout/components/contracts/factura-ehh/factura-ehh.component.html
+++ b/src/app/modules/menu-layout/components/contracts/factura-ehh/factura-ehh.component.html
@@ -24,7 +24,7 @@
                         <nz-form-control>
                             <label>Fecha de vencimiento</label>
                             <div nz-row>
-                              <nz-range-picker style="width: 475px;" formControlName="fechaVencimiento" [nzRanges]="ranges"></nz-range-picker>
+                              <nz-range-picker [nzShowTime]="true" style="width: 475px;" formControlName="fechaVencimiento" [nzRanges]="ranges"></nz-range-picker>
                             </div>
                         </nz-form-control>
                     </nz-form-item>
@@ -37,7 +37,7 @@
                         <nz-form-control>
                             <label>Fecha de facturación</label>
                             <div nz-row>
-                              <nz-range-picker style="width: 475px;" formControlName="fechaFacturacion" [nzRanges]="ranges"></nz-range-picker>
+                              <nz-range-picker [nzShowTime]="true" style="width: 475px;" formControlName="fechaFacturacion" [nzRanges]="ranges"></nz-range-picker>
                             </div>
                         </nz-form-control>
                     </nz-form-item>
