--- a/src/app/modules/menu-layout/components/rates/modal-parameters/modal-parameters.component.html
+++ b/src/app/modules/menu-layout/components/rates/modal-parameters/modal-parameters.component.html
@@ -8,7 +8,7 @@
         <div nz-col nzSpan="24">
             <label>Fecha valida</label>
             <div nz-row>
-                    <nz-range-picker style="width: 475px;" formControlName="fecha" [nzRanges]="ranges"></nz-range-picker>
+                    <nz-range-picker [nzShowTime]="true" style="width: 475px;" formControlName="fecha" [nzRanges]="ranges"></nz-range-picker>
             </div>
 
         </div>
