--- a/src/app/modules/menu-layout/components/clients/clients.component.html
+++ b/src/app/modules/menu-layout/components/clients/clients.component.html
@@ -53,7 +53,7 @@
               </ng-template>
             </div>
               <div nz-col nzOffset="1">
-                <app-submit-provider-modal [dataPosition]="provider"></app-submit-provider-modal>
+                <app-submit-client-modal [dataPosition]="provider"></app-submit-client-modal>
               </div>
             </div> 
           </ng-template> 
