--- a/src/app/modules/menu-layout/components/input-parameters/input-parameters.component.html
+++ b/src/app/modules/menu-layout/components/input-parameters/input-parameters.component.html
@@ -61,8 +61,8 @@
                 </div>
               </div>
             </td>
-            <td>{{ data.fechaInicio   | date:'dd/M/yyyy'  }}</td>
-            <td>{{ data.fechaFinal   | date:'dd/M/yyyy'  }}</td>  
+            <td>{{ data.fechaInicio   | date:'dd/M/yyyy':'GMT'  }}</td>
+            <td>{{ data.fechaFinal   | date:'dd/M/yyyy':'GMT'  }}</td>  
             <td>{{ data.observacion }}</td>  
             <td>{{data.valor}}</td>  
           </tr>
