--- a/src/app/modules/menu-layout/components/meters/manual-registration-modal/manual-registration-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/manual-registration-modal/manual-registration-modal.component.html
@@ -138,7 +138,7 @@
                       </td>
                       <td>{{ data.codigo }}</td>
                       <td>{{ data.descripcion }}</td>
-                      <td timeZone>{{ data.fecha  | date:'yyyy/M/dd' }}</td>
+                      <td timeZone>{{ data.fecha  | date:'yyyy/M/dd':'GMT' }}</td>
                       <td>{{ data.valor }}</td>
                     </tr>
                   </tbody>
