--- a/src/app/modules/menu-layout/components/meters/meters.component.html
+++ b/src/app/modules/menu-layout/components/meters/meters.component.html
@@ -104,10 +104,10 @@
 
           <td nzRight nzAlign="center"> 
             <div *ngIf="data.estado; else contractDisable"> 
-                <i nz-icon nzType="check-circle" nzTheme="outline"></i>
+                <i nz-icon style="color: green;" nzType="check-circle" nzTheme="outline"></i>
             </div>
             <ng-template #contractDisable>
-              <i nz-icon nzType="close-circle" nzTheme="outline"></i>
+              <i nz-icon style="color: red;" nzType="close-circle" nzTheme="outline"></i>
             </ng-template>
           </td> 
           <td nzAlign="center"  nzRight> 
