--- a/src/app/modules/menu-layout/components/meters/roll-over-modal/roll-over-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/roll-over-modal/roll-over-modal.component.html
@@ -167,14 +167,8 @@
                       </div>
                     </div>
                   </td>
-
-
-
-                  <td> 
-                    {{ data.id }}
-                  </td>
-                  <td>{{ data.fechaInicial  | date:'dd/M/yyyy' }}</td>
-                  <td>{{ data.fechaFinal  | date:'dd/M/yyyy'  }}</td>
+                  <td>{{ data.fechaInicial  | date:'dd/M/yyyy':'GMT' }}</td>
+                  <td>{{ data.fechaFinal  | date:'dd/M/yyyy':'GMT'  }}</td>
                   <td>{{ data.lecturaAnterior }}</td>
                   <td>{{ data.lecturaNueva }}</td>
                   <td nzRight>
