--- a/src/app/modules/menu-layout/components/generated-invoices/generated-invoices.component.html
+++ b/src/app/modules/menu-layout/components/generated-invoices/generated-invoices.component.html
@@ -13,7 +13,7 @@
     </div> -->
     
     <div nz-col nzSpan="3">
-      <button nz-button nzType="primary" nzSize="default" >Emitir todas</button>
+      <button nz-button nzType="primary" nzSize="default" (click)="EmitAll()">Emitir todas</button>
     </div>
 
     <div nz-col>
