--- a/src/app/modules/menu-layout/components/issued-invoices/issued-invoices.component.html
+++ b/src/app/modules/menu-layout/components/issued-invoices/issued-invoices.component.html
@@ -29,7 +29,7 @@
             <td nzLeft nzAlign="center">
               <button nz-button nzSize="small" nzDanger nzType="primary"
               nz-popconfirm
-              nzPopconfirmTitle="Estas seguro que quieres emitir esta factura ?"
+              nzPopconfirmTitle="Estas seguro que quieres cancelar esta factura ?"
               (nzOnConfirm)="CancelarFactura(data)"
               (nzOnCancel)="cancel()"
               nzPopconfirmPlacement="rightBottom"
@@ -39,8 +39,8 @@
             <td>{{ data.codigoContrato }}</td>
             <td>{{data.cliente}}</td>
             <td>{{data.fechaInicio  | date:'dd/M/yyyy':'GMT'  }} - {{data.fechaFin  | date:'dd/M/yyyy':'GMT'  }}</td>
-            <td>{{ data.energiaConsumida }}</td>
-            <td style="color: red;">{{data.total + "  LPS"}}</td>
+            <td>{{ data.energiaConsumida  | number:'1.0':'en-US' }} kWh</td>
+            <td style="color: red;">L {{data.total  | number:'1.0':'en-US'}}</td>
             <td nzRight nzAlign="center">
               <button nz-button nzSize="small" nzType="primary" (click)="GenerateInvoice(data)"><i nz-icon nzType="file-done"></i></button>
 
